--- a/tasker-app/pom.xml
+++ b/tasker-app/pom.xml
@@ -10,13 +10,15 @@
 	</parent>
 
 	<groupId>com.hidorikun</groupId>
-	<artifactId>tasker</artifactId>
+	<artifactId>tasker-app</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>tasker</name>
 	<description>Demo project for Spring Boot</description>
+
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
+
 	<dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -91,8 +93,23 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
+    <profiles>
+        <profile>
+            <id>aws</id>
+            <build>
+
+            </build>
+            <properties>
+                <spring.profiles.active>aws</spring.profiles.active>
+            </properties>
+        </profile>
+    </profiles>
 	<build>
 		<plugins>
 			<plugin>
