--- a/tasker-app/src/main/resources/application-dev.properties
+++ b/tasker-app/src/main/resources/application-dev.properties
@@ -3,6 +3,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.flyway.enabled=false
 spring.flyway.locations=classpath:db/migrations
 
-spring.datasource.url=jdbc:mysql://localhost:3306/tasker
-spring.datasource.username=root
-spring.datasource.password=asdf
+spring.datasource.url=jdbc:mysql://localhost:3307/tasker
+spring.datasource.username=gvele
+spring.datasource.password=gvele
