--- a/tasker-app/src/main/resources/application-prod.properties
+++ b/tasker-app/src/main/resources/application-prod.properties
@@ -1,8 +1,8 @@
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
-spring.flyway.enabled=true
+spring.flyway.enabled=false
 spring.flyway.locations=classpath:db/migrations
 
-spring.datasource.url=jdbc:mysql://eu-cdbr-west-03.cleardb.net/heroku_7a0377a37c6e12e
-spring.datasource.username=b178f39a76b4e8
-spring.datasource.password=3dcb6074
+spring.datasource.url=jdbc:mysql://192.168.0.133:3306/tasker
+spring.datasource.username=gvele
+spring.datasource.password=gvele
