--- a/tasker-web/main/package.json
+++ b/tasker-web/main/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --host 0.0.0.0 --proxyConfig=proxy-container.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
