--- a/tasker-web/main/package.json
+++ b/tasker-web/main/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 0.0.0.0 --proxyConfig=proxy-container.conf.json",
+    "serve": "ng serve",
+    "start": "ng serve --watch --host 0.0.0.0 --proxyConfig=proxy-container.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -79,11 +80,11 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@ngrx/store-devtools": "^12.3.0",
     "@angular-devkit/build-angular": "^0.1100.2",
     "@angular/cli": "^11.0.2",
     "@angular/compiler-cli": "^11.0.2",
     "@angular/language-service": "^11.0.2",
+    "@ngrx/store-devtools": "^12.3.0",
     "@types/c3": "^0.6.4",
     "@types/chartist": "^0.9.47",
     "@types/datatables.net": "^1.10.18",
